--- a/css/bicicletas/bicicletas-lista.css
+++ b/css/bicicletas/bicicletas-lista.css
@@ -3,6 +3,11 @@
   padding-bottom: 120px;
 }
 
+#nimbus .bicicletas-lista {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .bicicletas-lista a {
   display: block;
 }
@@ -38,6 +43,10 @@
   max-width: 1400px;
   margin: 0 auto;
   overflow-x: auto;
+}
+
+#nimbus .bicicletas-lista ul {
+  padding: 0 0px 20px 0px;
 }
 
 .bicicletas-lista li {
