--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,7 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
-  /* padding-bottom: 600px; */
 }
 
 ul,
@@ -10,7 +9,8 @@ h2,
 h3,
 h4,
 p,
-blockquote {
+blockquote,
+dd {
   margin: 0px;
 }
 
