--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -21,6 +21,10 @@
   font: 400 1.5rem/1.5 "Roboto", sans-serif;
 }
 
+.font-2-xl {
+  font: 500 2.25rem/1.35 "Roboto", sans-serif;
+}
+
 /* Poppins */
 .font-1-xs {
   font: 600 0.75rem/1.35 "poppins", sans-serif;
