--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,6 +1,6 @@
 
 .introducao-bg {
-  background: var(--cor-12);
+  background: var(--cor-12) url("../../img/dec/bottom-right.svg") no-repeat bottom 160px right 800px;
   box-shadow: inset 0 -120px var(--cor-0);
 }
 
