otimizado para produção

--- a/css/seguros/perguntas.css
+++ b/css/seguros/perguntas.css
@@ -11,9 +11,22 @@
   margin-bottom: 60px;
 }
 
+.perguntas button:hover::after,
+.perguntas button[aria-expanded="true"]::after{
+  transform:rotate(180deg);
+}
+
+.js .perguntas dd {
+  display: none;
+}
+
 .perguntas dd {
   padding-left: 20px;
   max-width: 80ch;
+}
+
+.js .perguntas dd.ativa {
+  display: block;
 }
 
 .perguntas dl > div {
@@ -25,16 +38,20 @@
   background: var(--cor-1);
 }
 
-.perguntas dt {
+.perguntas button {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   gap: 8px;
   margin-bottom: 16px;
   cursor: pointer;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
 }
 
-.perguntas dt::before {
+.perguntas button::before {
   content: "";
   display: inline-block;
   width: 12px;
@@ -42,12 +59,13 @@
   background: var(--cor-p1);
 }
 
-.perguntas dt::after {
+.perguntas button::after {
   content: "";
   display: inline-block;
   width: 14px;
   height: 6px;
   background: url("../../img/icones/seta-abrir.svg");
+  transition: 0.3s;
 }
 
 @media (max-width:800px){
