--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 @import "./utilidades/componentes.css";
 @import "./utilidades/cores.css";
 @import "./utilidades/formulario.css";
+@import "./utilidades/animation.css";
 
 /* Home */
 @import "./home/introducao.css";
